# django-africas-talking

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  manage.py  pyproject.toml
core/: admin.py  constants.py  models.py  pyproject.toml  utils.py
core/migrations/: 0001_initial.py  0002_initial.py
core/static/css/: main.css  spinners.css
core/static/js/: scripts.js
django_africas_talking/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  header.html  index.html  side-nav.html
templates/account/: base.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_email.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
users/: admin.py  constants.py  models.py
users/forms/: users.py
users/migrations/: 0001_initial.py
users/views/: auth_redirect.py
