[tool.poetry]
name = "django-africas-talking"
version = "0.1.0"
description = "SMS Application using Africas talking"
authors = ["tngeene <tngeene27@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.3"
africastalking = "^1.2.4"
django-environ = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
