[tool.poetry]
name = "django-africas-talking"
version = "0.1.0"
description = "SMS Application using Africas talking"
authors = ["tngeene <tngeene27@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.3"
africastalking = "^1.2.4"
django-environ = "^0.9.0"
phonenumberslite = "^8.13.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']
include = '\.pyi?$'
skip-string-normalization = true
